--- a/Project1/Contact.html
+++ b/Project1/Contact.html
@@ -21,7 +21,7 @@
 
     <div style="display: flex; font-size: 30px; justify-content:center; ">
         <nav>
-            <a href="Index.html">Home</a>
+            <a href="index.html">Home</a>
             |
             <a href="Places.html">Visit Places!</a>
             |
