--- a/Project1/Index.html
+++ b/Project1/Index.html
@@ -121,7 +121,7 @@
 
     <div style="display: flex; font-size: 30px; justify-content:center; ">
         <nav>
-            <a href="Index.html">Home</a>
+            <a href="index.html">Home</a>
             |
             <a href="Places.html">Visit Places!</a>
             |
