--- a/Project1/index.html
+++ b/Project1/index.html
@@ -110,7 +110,7 @@
     <hr />
     <h2>Contact Us</h2>
     <p style="font-size:40px; ">
-        <img height="40px" src="Kwander.github.io/Project1/Images/logos/apple-mail.png" /> kwander31@gmail.com
+        <img height="40px" src="https://Kwander.github.io/Kwander/Project1/Images/logos/apple-mail.png" /> kwander31@gmail.com
     </p>
     <p style="font-size:40px; ">
         <img height="40px" src="images/logos/Instagram.webp" /> @Kevnwander11
