--- a/Project1/index.html
+++ b/Project1/index.html
@@ -110,13 +110,13 @@
     <hr />
     <h2>Contact Us</h2>
     <p style="font-size:40px; ">
-        <img height="40px" src="https://github.com/Kwander/Kwander.github.io/blob/main/Project1/Images/photos/Meat.webp" /> kwander31@gmail.com
+        <img height="40px" src="https://github.com/Kwander/Kwander.github.io/blob/main/Project1/Images/logos/apple-mail.png" /> kwander31@gmail.com
     </p>
     <p style="font-size:40px; ">
-        <img height="40px" src="images/logos/Instagram.webp" /> @Kevnwander11
+        <img height="40px" src="https://github.com/Kwander/Kwander.github.io/blob/main/Project1/Images/logos/Instagram.webp" /> @Kevnwander11
     </p>
     <p style="font-size:40px; ">
-        <img height="40px" src="images/logos/telepone.png" /> (646) 575-1626
+        <img height="40px" src="https://github.com/Kwander/Kwander.github.io/blob/main/Project1/Images/logos/telepone.png" /> (646) 575-1626
     </p>
 
     <div style="display: flex; font-size: 30px; justify-content:center; ">
