--- a/Project1/index.html
+++ b/Project1/index.html
@@ -110,10 +110,11 @@
     <hr />
     <h2>Contact Us</h2>
     <p style="font-size:40px; ">
-        <img height="40px" src="https://github.com/Kwander/Kwander.github.io/Project1/Images/logos/apple-mail.png" /> kwander31@gmail.com
+        <img height="40px" src="https://github.com/Kwander/Kwander.github.io//Project1/Images/logos/apple-mail.png" /> kwander31@gmail.com
+        https://github.com/KwanderubaMichalczyk/kubamichalczyk.github.io/raw/master/_posts/images/equation-1.gif
     </p>
     <p style="font-size:40px; ">
-        <img height="40px" src="https://github.com/Kwander/Kwander.github.io/blob/main/Project1/Images/logos/Instagram.webp" /> @Kevnwander11
+        <img height="40px" src="https://github.com/Kwander/Kwander.github.io/blob/main/Project1/Images/logos/telepone.png" /> @Kevnwander11
     </p>
     <p style="font-size:40px; ">
         <img height="40px" src="https://github.com/Kwander/Kwander.github.io/blob/main/Project1/Images/logos/telepone.png" /> (646) 575-1626
