--- a/Project1/index.html
+++ b/Project1/index.html
@@ -110,10 +110,10 @@
     <hr />
     <h2>Contact Us</h2>
     <p style="font-size:40px; ">
-        <img alt="Email Image" height="40px" src="Images/logos/telepone.png"> kwander31@gmail.com
+        <img alt="Email Image" height="40px" src="Images/logos/apple-mail.png"> kwander31@gmail.com
     </p>
     <p style="font-size:40px; ">
-        <img height="40px" src="https://github.com/Kwander/Kwander.github.io/blob/main/Project1/Images/logos/telepone.png" /> @Kevnwander11
+        <img height="40px" alt="Telephoen image" src="Images/logos/telepone.png" /> @Kevnwander11
     </p>
     <p style="font-size:40px; ">
         <img height="40px" src="https://github.com/Kwander/Kwander.github.io/blob/main/Project1/Images/logos/telepone.png" /> (646) 575-1626
