--- a/Project1/Contact.html
+++ b/Project1/Contact.html
@@ -8,13 +8,13 @@
     <p>I've already laid out my contact info in the main page but here it is again. Contact for any inquiries. I cannot give any guides in Argentina as I currently live in the US.</p>
     <h2>Contact Us</h2>
     <p style="font-size:40px; ">
-        <img height="40px" src="images/logos/apple-mail.png" /> kwander31@gmail.com
+        <img height="40px" src="Images/logos/apple-mail.png" /> kwander31@gmail.com
     </p>
     <p style="font-size:40px; ">
-        <img height="40px" src="images/logos/Instagram.webp" /> @Kevnwander11
+        <img height="40px" src="Images/logos/Instagram.webp" /> @Kevnwander11
     </p>
     <p style="font-size:40px; ">
-        <img height="40px" src="images/logos/telepone.png" /> (646) 575-1626
+        <img height="40px" src="Images/logos/telepone.png" /> (646) 575-1626
     </p>
 
     <hr />
