--- a/Project1/Culture.html
+++ b/Project1/Culture.html
@@ -8,13 +8,13 @@
     <h1 style="background-color:coral;"class="cultureTitle"> Experience Argentine Culture</h1>
     <hr />
     <div class="Culturebox">
-        <img style=" margin-left:30px; border:4px solid black;" height="300px" src="images/photos/Tango.jpg" />
+        <img style=" margin-left:30px; border:4px solid black;" height="300px" src="Images/photos/Tango.jpg" />
         <div style=" border:10px solid lightyellow; width:400px; background-color:lightgray;">
             <p class="lePs">
                 Go out and see our unique customs, eat meat with us and maybe try our very fancy Tango dance. :) We eat meat, dance tango, and we eat a lot of italian foods, also some people there are really good at cursing in spanish.
             </p>
         </div>
-        <img style=" margin-right: 30px; border: 4px solid black;" height="300px" src="images/photos/Meat.webp" />
+        <img style=" margin-right: 30px; border: 4px solid black;" height="300px" src="Images/photos/Meat.webp" />
     </div>
     <hr />
 
