--- a/Project1/Places.html
+++ b/Project1/Places.html
@@ -8,13 +8,13 @@
     <h1 style="background-color:coral;" class="cultureTitle"> Visit Unique Argentine Places!</h1>
     <hr />
     <div class="Culturebox">
-        <img style=" margin-left:30px; border:4px solid black;" height="300px" src="images/photos/Carnaval.jpg" />
+        <img style=" margin-left:30px; border:4px solid black;" height="300px" src="Images/photos/Carnaval.jpg" />
         <div style=" border:10px solid lightyellow; width:400px; background-color:lightgray;">
             <p class="lePs">
                 There are a lot of places to go in Argentina. And Buenos Aires specifically is a big city with a lot of tourist locations and spots. However, I'll show you where I like to go. El coto de los juegos is a place I used to go a lot as a kind it is kind of like dave and busters. They also have a lot of food. Unfortunately it's not as popular as it used to be and it was sold out but it's still fun. Another place is the carnivals.
             </p>
         </div>
-        <img style=" margin-right: 30px; border: 4px solid black;" height="300px" src="images/photos/Coto.jpg" />
+        <img style=" margin-right: 30px; border: 4px solid black;" height="300px" src="Images/photos/Coto.jpg" />
     </div>
     <hr />
 
